--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,13 @@
         android:theme="@style/Theme.NavigationDrawer"
         tools:targetApi="31">
         <activity
-            android:name=".DisciplinesActivity"
+            android:name=".activities.DisciplinesActivity"
             android:exported="false" />
         <activity
-            android:name=".SpecialtiesActivity"
+            android:name=".activities.SpecialtiesActivity"
             android:exported="false" />
         <activity
-            android:name=".DepartmentsActivity"
+            android:name=".activities.DepartmentsActivity"
             android:exported="false" />
         <activity
             android:name=".pdfs.PdfActivity"
