--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.NavigationDrawer"
         tools:targetApi="31">
         <activity
+            android:name=".activities.SylabusActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.DisciplinesActivity"
             android:exported="false" />
         <activity
