--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:name=".activities.DepartmentsActivity"
             android:exported="false" />
         <activity
-            android:name=".pdfs.PdfActivity"
+            android:name=".activities.PdfActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
